# pim_iv_unip

./: CMakeLists.txt  LICENSE  Makefile  README.md  test_input_industria.txt
data/: industrias.txt  relatorio.txt  usuarios.txt
include/: industria.h  relatorio.h  usuario.h
src/: industria.c  main.c  relatorio.c  usuario.c
tests/: test_industria.c  test_usuario.c
